--- a/src/app/orbit-list/orbit-list.component.css
+++ b/src/app/orbit-list/orbit-list.component.css
@@ -8,17 +8,25 @@
 }
 
 table {
- color: #111;
- border-radius: 5px;
- overflow: hidden;
- margin: 12px 0;
- min-width: 300px;
- background: #dad8d8;
+	color: #111;
+	border-radius: 5px;
+	overflow: hidden;
+	margin: 12px 0;
+	min-width: 300px;
+	background: #dad8d8;
 }
 
 .header-row {
-	background: #34495E;
+	background: #223f5c;
 	color: #fff
+}
+
+.data-row {
+	background: #6c9ed1;
+}
+
+.data-row:nth-child(even) {
+background: rgb(104, 164, 179);
 }
 
 th, td {
